force-app/main/default/objects/Ticket__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <inlineHelpText>Raw text of the Owner name to ease the integration</inlineHelpText>
    <label>Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>