force-app/main/default/objects/Ticket__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Ticket Information</description>
    <inlineHelpText>Ticket Information</inlineHelpText>
    <label>Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>