force-app/main/default/objects/Ticket__c/fields/Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Id__c</fullName>
    <inlineHelpText>Id of the ticket</inlineHelpText>
    <label>Ticket Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>