force-app/main/default/objects/Ticket__c/fields/Worked_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Worked_Minutes__c</fullName>
    <formula>Worked_Seconds__c /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worked Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>