force-app/main/default/objects/Ticket__c/fields/Worked_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Worked_Seconds__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Log of Worked Seconds</inlineHelpText>
    <label>Worked Seconds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>