force-app/main/default/objects/Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Ticket_Id__c</columns>
    <columns>NAME</columns>
    <columns>Issue_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Worked_Hours__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Type__c</columns>
    <columns>Billed__c</columns>
    <columns>Paid__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>