force-app/main/default/objects/Ticket__c/listViews/Consulting_Tickets_Ticket.listView-meta.xml
<ListView>
    <fullName>Consulting_Tickets_Ticket</fullName>
    <filterScope>Queue</filterScope>
    <label>Consulting Tickets</label>
    <queue>Consulting_Tickets</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>