force-app/main/default/objects/Ticket__c/listViews/My_Tickets.listView-meta.xml
<ListView>
    <fullName>My_Tickets</fullName>
    <columns>Ticket_Id__c</columns>
    <columns>NAME</columns>
    <columns>Issue_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Worked_Hours__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Tickets</label>
</ListView>