force-app/main/default/objects/Ticket__c/listViews/Un_Owned_Tickets.listView-meta.xml
<ListView>
    <fullName>Un_Owned_Tickets</fullName>
    <columns>Ticket_Id__c</columns>
    <columns>NAME</columns>
    <columns>Issue_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Worked_Hours__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Queue</filterScope>
    <label>Un-Owned Tickets</label>
    <queue>Consulting_Tickets</queue>
</ListView>